# pdf2txt

./: .cursorrules  .gitignore  AGENTS.md  PIPELINE.md  PIPELINE_EXPLANATION.md  README.md  SCRIPT_ANALYSIS.md  adjust_crop.py  analysis_output.txt  analysis_output_transit8.txt  analysis_output_utf8.txt  analyze_excel_columns.py  analyze_pdf_coordinates.py  bill_summary_analysis.txt  check_field_location.py  check_field_location_output.txt  check_location_result.txt  check_table_values.py  commitmsg.txt  config.py  debug_new_output.txt  debug_output.txt  debug_output_full.txt  debug_output_utf8.txt  debug_results.txt  debug_rows_output.txt  debug_t1_check_file.py  debug_t1_extraction.py  debug_t1_new_file.py  debug_t1_output_utf8.txt  debug_t8.py  excel_analysis_output.txt  extract_text.py  geometry_extraction.py  pdf_pipeline_gui.py  pdf_pipeline_gui.spec  power_coords_final.txt  power_coords_output.txt  power_coords_output2.txt  pyproject.toml  (+88 more)
23 ghabz/: 1000668903120_extracted.json  1001247601325_extracted.json  1001575401325_extracted.json  1003257401327_extracted.json  1003709301325_extracted.json  1005937301320_extracted.json  1005945301320_extracted.json  1005963301320_extracted.json  1006189301326_extracted.json  1007480503129_extracted.json  batch_summary.json
archive/: ARCHIVE_SUMMARY.md  DOCUMENTATION_INDEX.md  FINAL_SCRIPT_ORGANIZATION.md  FOLDER_STRUCTURE.md  GENERALIZABILITY_ANALYSIS.md  IMPROVEMENTS_SUMMARY.md  IMPROVEMENT_PLAN.md  REQUIRED_SCRIPTS.md  SCRIPT_ANALYSIS.md  TEST_RESULTS_SUMMARY.md  check_crop_box.py  check_power_coords.py  clean_log.txt  (+85 more)
(+182 files in other folders)
