[project]
name = "pdf2txt"
version = "0.1.0"
description = "PDF to Text Extraction Pipeline for electricity bills"
requires-python = ">=3.9"
dependencies = [
    "pdfplumber>=0.10.0",
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
    "fuzzywuzzy>=0.18.0",
    "python-Levenshtein>=0.27.0",
    "python-dateutil>=2.8.0",
    "pillow>=9.0.0",
    "pytesseract>=0.3.10",
    "PyMuPDF>=1.23.0",
    "arabic-reshaper>=3.0.0",
    "python-bidi>=0.4.2",
    "imagehash>=4.2.0",
    "numpy>=1.21.0",
    "opencv-python>=4.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["pdf_classifier", "*.py"]
